src/pages/game/game-level.scss
/***************************************
Game Level
***************************************/

page-game-level {
  .content-zone {
    background-size: auto 100%;
    background-position: center bottom;
    background-repeat:no-repeat;
    overflow: auto;
    position:relative;
    @for $l from 1 through 5 {
      &.level_#{$l} {
        background-image: url('../assets/game/img/shared/level_#{$l}_bg.png');
      }
    }
  }

  ion-footer {
    background: linear-gradient(0deg, rgba(44, 44, 44, 1) 0%, rgba(42, 42, 42, 1) 100%); 
    opacity: 0.97;
  }

  .item-challenge {
    width: 100%;
    position: relative;
    font-family : Arial;
    font-weight : bold;
    font-size : 48px;
    color : #FFFFFF;
    text-shadow : 6px 6px 0px rgba(0, 0, 0, 0.1);
    background-color: transparent;

    &:first-child {
      border-top: .55px solid map-get($colors, border);
    }

    &.playing {
      background : linear-gradient(0deg, rgba(247, 183, 51, 1) 0%, rgba(247, 188, 49, 1) 50%, rgba(247, 209, 42, 1) 50%, rgba(247, 211, 41, 1) 100%);
      opacity: 0.95;
      color : #0D1B40;
      border-bottom: .55px solid map-get($colors, border-dark);
    }
    &.locked {
      background : linear-gradient(0deg, rgba(44, 44, 44, 1) 0%, rgba(42, 42, 42, 1) 50%, rgba(25, 27, 27, 1) 50%, rgba(24, 26, 26, 1) 100%);
      opacity: 0.97;
      border-bottom: .55px solid map-get($colors, border-dark);
    }

    .game-start, .lock-xs, .level-label, .prize-viewer {
      position: absolute;
      top: 50%;
    }
    
    .game-start {
      @include scale(0.85);
      right: 5px;
      margin-top: -36px;
      &:active {
        @include scale(0.8);
      }
    }

    .lock-xs {
      left: 50%;
      margin-left: -7px;
      margin-top: -15px;
    }
    
    .level-label {
      left: 0px;
      margin-top: -30px;
      width: 60px;
      text-align: center;
    }

    .prize-viewer {
      float: left;
      left: 65px;
      margin-top: -20px;
      display: inline-table;
    }
  }
  .help-indicator {
    position: absolute;
    right: 80px;
    top: 5%;
    z-index:1;
    @include animation(challenge-pointer, 3s, linear, $iteration:infinite);
  }

  @include keyframes(challenge-pointer){
    0%, 20%, 50%, 80%, 100% {
      @include transform(scale(0.4) translate(50%, -120%));
    }
    40% {
      @include transform(scale(0.4) translate(100%, -120%));
    }
    60% {
      @include transform(scale(0.4) translate(80%, -120%));
    }
  }
}

